package com.affinitynow.app.model;

public interface Matching {
    void matching(Utilisateur utilisateur);
}
